<resources>
    <string name="app_name">Sport List</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="odd_semester">Odd Semester</string>
    <string name="even_semester">Even Semester</string>
    <string name="optional_subject">Optional Subject</string>
    <string name="setting">Changes Language</string>


    <string name="subject_s_name">Subject\'s name</string>

    <string name="bahasa_indonesia">Bahasa Indonesia</string>
    <string name="english_language">English</string>

    <!--    odd semester-->
    <string name="programing_concept">Programing Concept</string>
    <string name="web_programing_concept">Web Programing Concept</string>
    <string name="algebra">Algebra</string>
    <string name="calculus">Calculus</string>
    <string name="pancasila">Pancasila</string>

    <!--  even semester  -->
    <string name="object_oriented_programing">Object Oriented Programing</string>
    <string name="web_design">Web Design</string>
    <string name="human_computer_interaction">Human Computer Interaction</string>
    <string name="query_data_structured">Query Data Structured</string>
    <string name="artificial_intelligent">Artificial Intelligent</string>

    <!--  optional subject  -->
    <string name="data_warehouse_data_mining">Data Warehouse and Data Mining</string>
    <string name="mobile_programing">Mobile Programing</string>
    <string name="web_application_security">Web Application Security</string>
    <string name="web_framework">Web Framework</string>
    <string name="audit_it">Audit IT</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="detail_name" translatable="false">subject\'s name</string>
    <string name="detail_lecturer_s_label">Lecturer\'s Name :</string>
    <string name="detail_credits_label">Credits :</string>
    <string name="detail_schedule_label">Schedule :</string>
    <string name="scedule_data_warehouse_and_data_mining">Monday, 10.30 AM</string>
    <string name="schedule_mobile_programing">Tuesday, 01.30 PM</string>
    <string name="schedule_web_application_security">Wednesday, 08.00 AM</string>
    <string name="schedule_web_framework">Wednesday, 10.30 AM</string>
    <string name="schedule_audit_it">Wednesday, 01.30 PM</string>
    <string name="schedule_artificial_intelligent">Friday, 10.30 AM</string>
    <string name="schedule_query_data_structured">Thursday, 10.30 AM</string>
    <string name="schedule_human_computer_interaction">Wednesday, 08.00 AM</string>
    <string name="schedule_object_oriented_programing">Monday, 10.30 AM</string>
    <string name="schedule_pancasila">Thursday, 10.30 AM</string>
    <string name="schedule_calculus">Wednesday, 10.30 AM</string>
    <string name="schedule_algebra">Wednesday, 08.00 AM</string>
    <string name="schedule_web_programing_concept">Tueday, 01.30 PM</string>
    <string name="schedule_programing_concept">Monday, 10.30 AM</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="welcome_to_subjects_list_apps">Welcome to Subjects List Apps</string>
    <string name="languange">Set App\'s Language</string>
    <string name="language">Set App\'s Language</string>
    <string name="set_off">Apps Language is English by Default. Switch to change to Bahasa Indonesia</string>
    <string name="set_on">Apps Language is Bahasa Indonesia. Switch to change to English</string>
    <string name="set_title">English</string>
    <string name="nav_header_desc">By : 1810817210020@mhs.ulm.ac.id</string>
    <string name="nav_header_title" translatable="false">Muhammad Rizal</string>
    <string name="home_title">Home</string>


</resources>