<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragment.DetailFragment">

    <TextView
        android:id="@+id/subject_s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_name"
        android:textSize="24dp"
        style="@style/text_detail"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_lecturer_s_label"
        style="@style/text_label"
        app:layout_constraintEnd_toEndOf="@+id/subject_s_name"
        app:layout_constraintStart_toStartOf="@+id/subject_s_name"
        app:layout_constraintTop_toBottomOf="@+id/subject_s_name" />

    <TextView
        android:id="@+id/lecturer_s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="lecture's name"
        style="@style/text_detail"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_credits_label"
        app:layout_constraintEnd_toEndOf="@+id/lecturer_s_name"
        app:layout_constraintStart_toStartOf="@+id/lecturer_s_name"
        app:layout_constraintTop_toBottomOf="@+id/lecturer_s_name" />

    <TextView
        android:id="@+id/credit_s_subject"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Credit's Subject"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/text_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_schedule_label"
        app:layout_constraintEnd_toEndOf="@+id/credit_s_subject"
        app:layout_constraintStart_toStartOf="@+id/credit_s_subject"
        app:layout_constraintTop_toBottomOf="@+id/credit_s_subject" />

    <TextView
        android:id="@+id/schedule_s_subject"
        style="@style/text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Schedule"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>